# Back-End-Hosting

./: .dockerignore  Cargo.toml  Dockerfile
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: docker_ci.yaml  main.yaml
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/routes/: dashboard.rs  deploy.rs  health_check.rs  mod.rs
tests/: health_check.rs
