[package]
name = "byte_genius_hosting"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-http = "3.11.0"
actix-rt = "2.10.0"
actix-web = "4.11.0"
config = "0.15.11"
once_cell = "1.21.3"
reqwest = "0.12.15"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = "1.45.0"
tracing-actix-web = "0.7.18"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
