[package]
name = "byte_genius_hosting"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-http = "3.11.0"
actix-web = "4.11.0"
config = "0.15.11"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde-aux = "4.7.0"
tracing = { version = "0.1.41", features = ["log"] }
tracing-actix-web = "0.7.18"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }

[dev-dependencies]
tokio = "1.45.0"
actix-rt = "2.10.0"
reqwest = "0.12.15"
once_cell = "1.21.3"
